--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -25,7 +25,7 @@
 				<h4>Register with:</h4>
                 <ul class="list-inline">
                   
-					<li> <a href="{% ur 'facebook_login'  %}" class="btn-floating btn-lg-full fb-bg"><i class="fa fa-facebook"> </i></a>
+					<li> <a href="{% url 'facebook_login'  %}" class="btn-floating btn-lg-full fb-bg"><i class="fa fa-facebook"> </i></a>
 					</li>
 					<li><a href="{% url 'google_login' %}" class="btn-floating btn-lg-full gplus-bg"><i class="fa fa-google-plus"> </i></a></li>
 					<li><a class="btn-floating btn-lg-full tw-bg"><i class="fa fa-twitter"></i></a></li> 
