--- a/templates/base_principal.html
+++ b/templates/base_principal.html
@@ -10,6 +10,9 @@
 <html>
 <head>
 	<title></title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
@@ -24,6 +27,8 @@
           href="https://fonts.googleapis.com/css?family=Aller">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Raleway">
+
+
           <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
