--- a/templates/restaurant/restaurant_list.html
+++ b/templates/restaurant/restaurant_list.html
@@ -30,7 +30,7 @@
                     <a href="">Bonnes adresses</a>
                 </li>
                 <li class="active">
-                    Bonnes adresses
+                   {{restaurant.category}}
                 </li>
                 
             </ol>
