--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -18,7 +18,7 @@
           <h3>Don't have an account yet</h3>
           <hr>
           <p> Click here to create an acccount  <br><br>
-          <a class="btn" href="{% url 'account_signup' %}">Sign up</a></p>
+          <a class="btn waves-effect waves-light" href="{% url 'account_signup' %}" style="background: #fff;">Sign up</a></p>
           <div class="form-container register-form">
 
           </div>
@@ -28,7 +28,6 @@
         <div class="form-container login-form card text-center">
                 <h4>Login with:</h4>
                 <hr>
-                
                 
                 <ul class="list-inline">
                   
