--- a/gastronomie/static/css/style.css
+++ b/gastronomie/static/css/style.css
@@ -10,8 +10,9 @@ iframe{
   transition: all .2s ease-in-out;
 }
 .mobile-menu{
-	background-color: #222;
+	background-color: #cc2d63;
 	color: #f5f5f5;
+	padding-bottom: 30px;
 }
 .recipe{
 	margin-top: 10px;
@@ -23,7 +24,6 @@ iframe{
 	color: #fff;
 	font-family:'Roboto',sans-serif;
 	padding: 10px 15px 10px 15px;
-	background-color: #c00;
 
 }
 .recipe a:hover{
@@ -73,7 +73,7 @@ iframe{
 	border: 4px solid #fff;
 	/*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
 	width: 100%;
-	background: #080808;
+	background: #f1caca;;
 	color: #f5f5f5;
 	margin-bottom: 20px;
 
@@ -244,7 +244,7 @@ iframe{
 	content: '';
     height: 1px;
     width: 20px;
-    background: #E62116 !important;
+    background: #b9456d !important;
     position: absolute;
     left: 0;
     margin-top: 30px;
@@ -254,7 +254,7 @@ iframe{
 }
 
 .widget-left .media-heading a:hover{
-		color: #dd3333;
+		color: #b9456d;
 }
 .widget-left .media-body .icon{
 	font-size: 12px;	
@@ -461,7 +461,7 @@ iframe{
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  background-color: #c00;
+  background-color:#cc2d63;
   border: 1px solid transparent;
   border-radius: 10em;
   color: fff;
