--- a/gastronomie/static/css/stylesheet.css
+++ b/gastronomie/static/css/stylesheet.css
@@ -76,6 +76,24 @@ footer.page-footer .social-section {
   padding: 0;
   position: relative;
 }
+
+.rp-color-first{
+  color: #cc2d63;
+}
+
+.rp-bg-color-first{
+  background-color: #cc2d63;
+}
+.rp-arrow{
+    position: absolute;
+    top: 30px;
+    left: -8px;
+    height: 0;
+    width: 0;
+    border-bottom: 8px solid transparent;
+    border-right: 8px solid white;
+    border-top: 8px solid transparent;
+  }
 .rp-search input[type="text"] {
   height: 40px;
   font-size: 24px;
@@ -156,7 +174,8 @@ footer.page-footer .social-section {
     padding-top:40px;
 }
 .content {
-    margin-top:0px;
+    margin-top:120px;
+    position: relative;
 }
 .sticky {
     position:fixed;
@@ -313,7 +332,7 @@ img .card-img{
 	
 }
 .card-title h5 a:hover{
-	color: #dd3333;
+	color: #b9456d;
 	/*text-shadow: 0 1px 0 #e4dbdb;*/
 }
 
@@ -356,7 +375,7 @@ img .card-img{
 
 }
 .rp-card-post .card-footer a:hover{
-	color: #dd3333;
+	color: #b9456d;
 }
 
 .rp-card-post .card-footer .list-inline a{
@@ -397,7 +416,7 @@ img .card-img{
 }
 
 .rp-post-title a:hover{
-	color: #c00;
+	color: #cc2d63;
 }
 
 .rp-post-meta-info{
@@ -405,7 +424,7 @@ img .card-img{
 }
 
 .rp-post-meta-info .rp-author{
-	color: #dd3333;
+	color: #b9456d;
 }
 
 .rp-post-meta-info a:hover{
@@ -460,6 +479,7 @@ img .card-img{
 .rp-post-instruction{
 	margin-bottom: 30px;
 
+
 }
 .rp-post-instruction h5{
 	font-family: 'Tangerine', serif;
@@ -467,12 +487,40 @@ img .card-img{
   	color: #111;
 }
 
-.rp-post-instruction h2{
-	/*font-size: 14px;
-	display: inline;
-	border-color: 1px solid #dd2c00;
-	border-radius: 10px;*/
-	
+.rp-post-instruction .rp-bloc-note{
+    background: #f6f6f6;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.25);
+    margin: 0px 0 20px 0px;
+    position: relative;
+    width: 100%;
+    background-image: -webkit-radial-gradient(#e6e6e6 21%, transparent 21%),-webkit-radial-gradient(rgba(0,0,0,0.25) 21%, transparent 26%),-webkit-linear-gradient(top, transparent 0%, transparent 95%, rgba(96,159,159,0.1) 95%, rgba(96,159,159,0.1) 100%);
+    background-image: -moz-radial-gradient(#e6e6e6 21%, transparent 21%),-moz-radial-gradient(#e6e6e6 10%, transparent 12%),-moz-linear-gradient(top, transparent 0%, transparent 95%, rgba(96,159,159,0.1) 95%, rgba(96,159,159,0.1) 100%);
+    background-image: radial-gradient(#e6e6e6 61%,rgba(0,0,0,0) 21%),radial-gradient(#e6e6e6 10%,rgba(0,0,0,0) 12%),linear-gradient(top, transparent 0%, transparent 95%, rgba(96,159,159,0.1) 95%, rgba(96,159,159,0.1) 100%);
+    background-position: 0px 6px, 0px 5px, 10% 8px;
+    background-repeat: repeat-y, repeat-y, repeat;
+    background-size: 48px 48px, 48px 48px, 24px 24px;
+    padding: 17px 24px 4px 64px;
+    top: 0px;
+}
+.rp-post-instruction.rp-post-step ol>li:before{
+    position: absolute;
+    top: 3px;
+    left: -34px;
+    width: 34px;
+    height: 34px;
+    text-align: center;
+    line-height: 32px;
+    color: #999;
+    font-weight: 700;
+    font-size: 16px;
+    background-color: #f4f4f4;
+    content: counter(li-counter);
+    counter-increment: li-counter;
+    cursor: default;
+}
+.rp-comment{
+  background: #f8f8f8;
+  padding: 15px;
 }
 .rp-post-related{
 	margin-top: 25px;
@@ -525,7 +573,7 @@ img .card-img{
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  background-color: #c00;
+  background-color: #cc2d63;
   border: 1px solid transparent;
   border-radius: 10em;
   color: #fff;
@@ -534,7 +582,7 @@ img .card-img{
 
 
 .rp-form{
-  background: linear-gradient(45deg, rgba(249, 63, 35, 1) 0%, rgba(249, 63, 35, 1) 20%, rgba(249, 63, 35, 0.8) 60%, rgba(249, 63, 35, 0.6) 100%);
+  background: linear-gradient(45deg, rgb(218, 56, 111) 0%, rgb(150, 54, 107) 20%, rgba(195, 178, 185, 0.8) 60%, rgb(216, 53, 108) 100%);
   margin-top:150px;
   min-height: 350px;
   padding: 50px;
@@ -559,4 +607,8 @@ img .card-img{
     -o-flex-direction: column;
     flex-direction: column;
     justify-content: center;
+}
+
+.rp-form .login-form h4{
+  color: #333;
 }
