--- a/templates/base_principal.html
+++ b/templates/base_principal.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
 {% load thumbnail %}
 {% load humanize %}
+{% load flatpages %}
 {% load embed_video_tags %}
 {% block extrahead %}
 <script>window.CKEDITOR_BASEPATH = '{% static "ckeditor/ckeditor/" %}';</script>
@@ -15,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
+  <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
 	<link rel="stylesheet" href="{% static 'css/materialize.css' %}">
 	<link rel="stylesheet" href="{% static 'css/animate.css' %}">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -23,6 +24,8 @@
           href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Aller">
     <link rel="stylesheet"
@@ -39,7 +42,178 @@
 </head>
 <body>
 
-{% include 'partials/header.html' %}
+{% load i18n %}
+<header class="navbar-fixed-top z-depth-1">
+  
+ 
+<div class="navbar navbar-inverse">
+    <div class="container">
+    <div class="col-md-8 col-xs-8">
+    <ul class="social-link list-inline">
+         <li><a class=""><i class="fa fa-facebook"> </i></a></li> 
+         <li><a class=""><i class="fa fa-twitter"> </i></a></li>
+         <li><a class=""><i class="fa fa-google-plus"> </i></a></li>
+         <li><a class=""><i class="fa fa-instagram"> </i></a></li>
+         <li><a class=""><i class="fa fa-pinterest"> </i></a></li>
+         <li><a class=""><i class="fa fa-youtube"> </i></a></li>
+      </ul>
+      </div>
+      <div class="col-md-offset-3 col-md-1 col-xs-4 log">
+         <a class="dropdown">
+            {% if user.is_authenticated %}
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{ request.user.username }} <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                      <li>
+                            <a href="{% url 'recipe_box_user' %}"><i class="fa fa-fw fa-user"></i> Profile</a>
+                        </li>
+                        
+                        <li>
+                            <a href="{% url 'recipe_add' %}"><i class="fa fa-cutlery" aria-hidden="true"></i> Add a recipe</a>
+                        </li>
+                        
+                        <li>
+                            <a href="{% url 'userprofile_update' %}"><i class="fa fa-fw fa-gear"></i>Account settings</a>
+                        </li>
+                        {% if user.is_staff %}
+                        <li>
+                            <a href="{% url 'stats' %}"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                        </li>
+                        {% endif %}
+                        <li class="divider"></li>
+                        <li>
+                            <a href="" data-toggle="modal" data-target="#logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                        </li>
+                    </ul>
+                {% else %}
+            <a href="{% url 'account_login' %}"><i class="fa fa-user"></i>&nbsp; Log in </a>
+                
+        {% endif %}
+               
+        </a>
+      </div>     
+  </div>
+  </div>
+
+<div class="mainmenu-area">
+  <div class="navbar navbar-default hidden-sm hidden-xs">
+      <div class="container-fluid">
+        <div class="row">
+        
+    <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="col-md-5">
+          
+            <ul class="nav navbar-nav">
+              <li class=""><a href="/">{% trans 'Home' %}<span class="sr-only">(current)</span></a></li>
+              
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans 'Recipes' %} <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                {%for cat in categories %}
+                  <li><a href="{% url 'recipe_per_cat' pk=cat.pk %}">{{cat.name}}</a></li>
+                 {% endfor %}
+                </ul>
+              </li>
+              <li><a href="{% url 'video_list' %}">{% trans 'Videos' %}</a></li> 
+              <li><a href="{% url 'post_list' %}">{% trans 'Blog' %}</a></li>
+               <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bonnes adresses <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="{% url 'restaurant_list' %}">{% trans 'Restaurants' %}</a></li>
+                  <li><a href="{% url 'catering_list' %}">{% trans 'Services traiteurs' %}</a></li>
+                </ul>
+              </li>
+              
+            </ul>
+            
+            
+
+          </div>
+
+          <div class="col-md-2">
+   
+            <a class="navbar-brand" href="/"><!-- <img src="{% static 'img/logo.jpg' %}" class="img-responsive"> -->Papilles Gustatives</a>
+          
+          </div>
+          <div class="col-md-5">
+            <ul class="nav navbar-nav">
+              
+              
+             
+              <li><a href="#">{% trans 'E-shop' %}</a></li>
+              <li><a href="{% url 'contributors' %}">{% trans 'Community' %}</a></li>
+               <li><a href="">{% trans 'About us' %}</a></li>
+              <li><div class="recipe ">
+                   <a href="{% url 'recipe_add' %}" class="a-responsive rp-bg-color-first">{% trans 'Submit your recipe' %}</a>
+                </div></li>
+            </ul>
+
+            <!-- <div id="wrap" class="rp-search">
+              <form action="" autocomplete="on">
+              <input id="search" name="search" type="text" placeholder="What're we looking for ?"><button type="button" class="rp-search-toggle"><i class="fa fa-search"></i></button>
+              </form>
+            </div> -->
+                
+          </div>
+
+        </div>
+    </div><!-- /.container-fluid -->
+    
+  </div>
+
+
+  <div class="mobile-menu  visible-xs visible-sm">
+    
+   
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <h4 class="navbar-brand" href="/"><!-- <img src="{% static 'img/logo.jpg' %}" class="img-responsive"> -->Papilles Gustatives</h4>
+          </div>
+         
+          
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            
+            <ul class="nav navbar-nav">
+              
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans 'Recipes' %} <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                {%for cat in categories %}
+                  <li><a href="{% url 'recipe_per_cat' pk=cat.pk %}">{{cat.name}}</a></li>
+                 {% endfor %}
+                </ul>
+              </li>
+              <li class="divider"></li>
+              <li><a href="{% url 'video_list' %}">{% trans 'Videos' %}</a></li> 
+              <li class="divider"></li>
+              <li><a href="{% url 'post_list' %}">{% trans 'Blog' %}</a></li>
+              <li class="divider"></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bonnes adresses <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="{% url 'restaurant_list' %}">{% trans 'Restaurants' %}</a></li>
+                  <li><a href="{% url 'catering_list' %}">{% trans 'Services traiteurs' %}</a></li>
+                </ul>
+              </li>
+              <li class="divider"></li>
+              <li><a href="#">{% trans 'E-shop' %}</a></li>
+              <li class="divider"></li>
+              <li><a href="{% url 'contributors' %}">{% trans 'Community' %}</a></li>
+              <li class="divider"></li>
+              <li><a href="">{% trans 'About us' %}</a></li>
+            </ul>
+          
+            
+          </div>
+    
+  
+    </div>
+  </div>
+</header>
 
 <div class="content">
 {% block slider %}
@@ -62,7 +236,56 @@
 
 
 
-{% include 'partials/footer.html' %}
+<!-- Footer page -->
+
+<footer>    
+        <div class="footer-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h3> Gastro Togolaise</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                        
+                        </p>
+                        <div class="link-section">
+                          <ul class="list-inline">
+                               <li><a class=""><i class="fa fa-facebook"> </i></a></li> 
+                               <li><a class=""><i class="fa fa-twitter"> </i></a></li>
+                               <li><a class=""><i class="fa fa-google-plus"> </i></a></li>
+                               <li><a class=""><i class="fa fa-instagram"> </i></a></li>
+                               <li><a class=""><i class="fa fa-pinterest"> </i></a></li>
+                               <li><a class=""><i class="fa fa-youtube"> </i></a></li>
+                            </ul> 
+                        </div>
+
+                    </div>
+                    <div class="col-md-4">
+                        <h3> {% trans 'About us' %}</h3>
+                        {% get_flatpages as flatpages %}
+            <ul>
+              {% for page in flatpages %}
+                <li><a href="/pages{{ page.url }}">{{ page.title }}</a></li>
+              {% endfor %}
+            </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>{% trans 'Contact' %}</h3>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                <p>© Designed by <a href="">A.S</a>. All Rights Reserved. 
+                
+        
+        </p>
+            </div>
+        </div>
+            
+</footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <!-- <script src="http://code.jquery.com/jquery-1.8.2.min.js" type="text/javascript"></script> -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
