--- a/gastronomie/static/css/bootstrap.css
+++ b/gastronomie/static/css/bootstrap.css
@@ -1440,22 +1440,7 @@ ul ol,
 ol ol {
   margin-bottom: 0;
 }
-ol>li:before{
-    position: absolute;
-    top: 3px;
-    left: -34px;
-    width: 34px;
-    height: 34px;
-    text-align: center;
-    line-height: 32px;
-    color: #999;
-    font-weight: 700;
-    font-size: 16px;
-    background-color: #f4f4f4;
-    content: counter(li-counter);
-    counter-increment: li-counter;
-    cursor: default;
-}
+
 .list-unstyled {
   padding-left: 0;
   list-style: none;
@@ -4544,13 +4529,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default {
   background-color: #fff;
-  font-family: 'Lora', sans-serif;
-  font-style: italic;
-  font-weight: 400;
-  font-size: 14px;
-  text-transform: capitalize;
   padding-top: 20px;
   padding-bottom: 15px;
+  
   /*border-color: #e7e7e7;*/
 
 }
@@ -4567,6 +4548,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-nav > li > a {
   color: #333;
+  font-family: 'Tangerine', sans-serif;
+  /*font-style: italic;*/
+  font-weight: 400;
+  font-size: 30px;
+  /*text-transform: capitalize;*/
+  
   
 }
 .navbar-default .navbar-nav > li > a:hover,
