--- a/gastronomie/static/css/stylesheet.css
+++ b/gastronomie/static/css/stylesheet.css
@@ -1,6 +1,22 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
 @import url(https://raw.github.com/FortAwesome/Font-Awesome/master/docs/assets/css/font-awesome.min.css);
 
+
+/* Paste this css to your style sheet file or under head tag */
+/* This only works with JavaScript, 
+if it's not present, don't show loader */
+.no-js .loader { display: none;  }
+.js .loader { display: block; position: absolute; left: 100px; top: 0; }
+.loader {
+ /* position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url("../img/loading-gif.gif") center no-repeat #fff;*/
+}
+
 footer{
 	/*background: #000;*/
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.12), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -473,7 +489,7 @@ img .card-img{
 }
 
 .rp-post-description{
-	margin-bottom: 26px;
+	margin-bottom: 20px;
 }
 
 .rp-post-instruction{
@@ -499,10 +515,10 @@ img .card-img{
     background-position: 0px 6px, 0px 5px, 10% 8px;
     background-repeat: repeat-y, repeat-y, repeat;
     background-size: 48px 48px, 48px 48px, 24px 24px;
-    padding: 17px 24px 4px 64px;
+    padding: 17px 24px 4px 34px;
     top: 0px;
 }
-.rp-post-instruction.rp-post-step ol>li:before{
+/*.rp-post-instruction.rp-post-step ol>li:before{
     position: absolute;
     top: 3px;
     left: -34px;
@@ -517,7 +533,7 @@ img .card-img{
     content: counter(li-counter);
     counter-increment: li-counter;
     cursor: default;
-}
+}*/
 .rp-comment{
   background: #f8f8f8;
   padding: 15px;
