--- a/templates/recipe/recipe_box_user.html
+++ b/templates/recipe/recipe_box_user.html
@@ -43,7 +43,7 @@
             {% include 'partials/messages.html' %}
             <div class="col-lg-8">
                 <p>
-                    Looks like you are too busy cooking and haven't uploaded anything. Please take some time to contribute your inspirational recipes or photos to make Food.com a better place
+                    Looks like you are too busy cooking and haven't uploaded anything. Please take some time to contribute your inspirational recipes or photos to make ....com a better place
                 </p>
             </div>
             <div class="col-lg-4">
@@ -66,7 +66,7 @@
             </div>
 
         </div>
-        <hr>
+        
         <br>
         <div class="row">
                     
