--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -208,7 +208,7 @@
          <!--Facebook-->
         <a class="btn fb-bg"><i class="fa fa-facebook left"></i><span class="hidden-xs"> | Facebook</span></a>
         <!--Twitter-->
-        <a class="btn tw-bg" ><i class="fa fa-twitter left"></i><span class="hidden-xs"> | | Twitter</span></a>
+        <a class="btn tw-bg" ><i class="fa fa-twitter left"></i><span class="hidden-xs"> | Twitter</span></a>
         <!--Gplus-->
         <a class="btn gplus-bg"><i class="fa fa-google-plus"></i></a>
         <!--Pinterest-->
