--- a/templates/restaurant/restaurant_list.html
+++ b/templates/restaurant/restaurant_list.html
@@ -54,6 +54,7 @@
     <article class="row">   
     
         <div class="col-sm-5">
+            <div class="view hm-zoom">
             {% if restaurant.image %}
                 {% thumbnail restaurant.image  "900x800" crop="center" as im %}
                     <img src="{{im.url}}" class="img-responsive">
@@ -62,6 +63,10 @@
             {% else %}
                 <img src="{% static 'img/post-1.jpg' %}" class="img-responsive">     
             {% endif %}
+                <div class="mask flex-center">
+                   
+                </div>
+            </div>
 
         </div>
         <div class="col-sm-7">
@@ -75,7 +80,7 @@
 
             <!--/.Rating-->
             <p>{{ restaurant.description|safe|truncatechars:150 }}</p>
-            <a href="" class="rp-post-btn"><em> Lire la suite → </em></a>
+           <!--  <a href="" class="rp-post-btn"><em> Lire la suite → </em></a> -->
            
 
             <div class="rp-post-detail">
