--- a/templates/video/video_detail.html
+++ b/templates/video/video_detail.html
@@ -63,7 +63,7 @@
     
     <div class="rp-post-meta-info">
         <div class="row">
-            <div class="col-xs-8">
+            <div class="col-xs-7">
                 <ul class="list-inline">
                     <li>
                 {% if video.author.profile.photo %}
@@ -75,7 +75,7 @@
                     <li> - {{ video.published_at|date:'F j, Y' }}</li> 
                 </ul>
             </div>
-            <div class="col-xs-4"> 
+            <div class="col-xs-5"> 
                 <ul class="list-inline text-right">    
                     <li><i class="fa fa-eye" aria-hidden="true"></i> {{video.view}}</li>
 
@@ -88,9 +88,9 @@
     </div>
     <div class="rp-post-share">
         <!--Facebook-->
-        <a class="btn fb-bg"><i class="fa fa-facebook"></i> | Share on Facebook</a>
+        <a class="btn fb-bg"><i class="fa fa-facebook"></i><span class="hidden-xs"> | Share on Facebook</span></a>
         <!--Twitter-->
-        <a class="btn tw-bg" ><i class="fa fa-twitter"></i> | Tweet on Twitter</a>
+        <a class="btn tw-bg" ><i class="fa fa-twitter"></i><span class="hidden-xs"> | Tweet on Twitter</span></a>
         <!--Gplus-->
         <a class="btn gplus-bg"><i class="fa fa-google-plus"></i></a>
         <!--Pinterest-->
@@ -117,50 +117,54 @@
     <!-- Section comments -->
     <section>
 
-        <div class="row" id="comments">
-            <div class="col-lg-12">
-            {% get_comment_count for video as comment_count %}
-            <h3 class="" data-toggle="collapse" href="#collapse1"><label class="btn btn-danger">{{comment_count}}</label> Comments</h3>
-            
-            <div id="collapse1" class="panel-collapse collapse">
-             
-                 <br>
-                <div id="comment-list">
+       <div class="row" id="comments">
+        {% get_comment_count for video as comment_count %}
+        <h3 class="" data-toggle="collapse" href="#collapse1"><i class="fa fa-comments" aria-hidden="true"></i> Comments ({{comment_count}})</h3>
+        
 
-                    <ul class="list">
-                    {% get_comment_list for video as comment_list %}
+        <div id="collapse1" class="panel-collapse collapse">
+         
+             <br>
+            <div id="comment-list">
 
-                    {% for comment in comment_list|fill_tree reversed %}
-                        <div class="name">
-                            <div class="media">
-                                <a class="pull-left" href="#"> 
-                                {% if comment.user.profile.photo %}
-                                
-                                    <img src="{{comment.user.profile.photo.url}}" class="img-circle" width="50px;" alt="">
-                                
-                                 {% else %}
-                                    <img src="{% static 'img/user-logo.jpg' %}" class="" width="50px;" alt=""> 
-                                 {% endif %}  
-                                </a> 
-                                <div class="media-body">
-                                    <h6 class="media-heading"><a href=""><!-- {{comment.user}} --> {{comment.user_name}}</a></h6>  .   {{comment.submit_date|naturaltime}}
-                                    <hr> 
-                                    <p>{{comment.comment}}</p>
-                                </div>
+                <ul class="list">
+                {% get_comment_list for video as comment_list %}
 
+                {% for comment in comment_list|fill_tree reversed %}
+                    <div class="name">
+                        <div class="media">
+                            <a class="pull-left" href="#"> 
+                            {% if comment.user.profile.photo %}
+                            
+                                <img src="{{comment.user.profile.photo.url}}" class="img-circle" width="50px;" alt="">
+                            
+                             {% else %}
+                                <img src="{% static 'img/user-logo.jpg' %}" class="" width="50px;" alt=""> 
+                             {% endif %}  
+                            </a> 
+                            <div class="media-body rp-comment">
+                                <span class="rp-arrow">
+                                </span>
+                                <h6 class="media-heading"><a href=""><!-- {{comment.user}} --> {{comment.user_name}}</a></h6>  .   {{comment.submit_date|naturaltime}}
+                                <hr> 
+                                <p>{{comment.comment}}</p>
                             </div>
-                        </div>
-                      {% endfor %}
-                    </ul>
-                   
-                    <!-- Pagination comments -->
 
-                    <div class="comment-pagination">
-                        <ul class="pagination"></ul>
+                        </div>
                     </div>
-                    
+                  {% endfor %}
+                </ul>
+               
+                <!-- Pagination comments -->
+
+                <div class="comment-pagination">
+                    <ul class="pagination"></ul>
                 </div>
-            </div>  
+                
+            </div>
+
+            
+        </div> 
             <!-- Comment form -->
                 <div class="form-block col-xs-12">
                     <div class="text-center">
